[project]
name = "video-hunter"
version = "0.1.0"
description = "白名单视频采集、去重、聚类、最早来源追踪，以及 X 书签作者知识图谱。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pillow>=11.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_hunter"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
